<resources>
    <string name="app_name">jonbeo win</string>
    <string name="title_encouraging_word">격려 한마디</string>
    <string name="title_jonbeo_count">존버 카운트</string>
    <string name="jonbeo_day_count">%d일째 버티는 중!</string>
    <string name="add">추가하기</string>
    <string name="edit">편집</string>
    <string name="remove">제거</string>
    <string name="close">닫기</string>
    <string name="title_add_asset">자산 추가</string>
    <string name="title_asset_detail">자산 상세</string>
    <string name="asset_name">자산명</string>
    <string name="asset_name_hint">자산명을 입력하세요</string>
    <string name="buy_date">매수일</string>
    <string name="choose_date">날짜 선택</string>
    <string name="save">저장</string>
    <string name="fix">수정</string>
    <string name="asset_name_empty_message">자산 이름을 한 글자 이상 입력해 주세요</string>
    <string name="add_asset_error_message">자산 추가 도중 오류가 발생했습니다</string>
    <string name="asset_detail_error_message">자산 상세 데이터를 불러올 수 없습니다</string>
    <string name="date_empty_message">날짜를 선택해 주세요</string>
    <string name="date_error_message">오늘 이후의 날짜는 선택할 수 없습니다</string>
    <string name="jonbeo_asset_empty_message">저장된 자산 목록이 없습니다</string>
    <string name="jonbeo_asset_error_message">자산 목록을 불러올 수 없습니다</string>
    <string name="encourage_list_empty_message">저장된 격려 한마디 목록이 없습니다</string>
    <string name="encourage_list_error_message">격려 한마디 목록을 불러올 수 없습니다</string>
    <string name="date_format">%d/%d/%d</string>
    <string name="encourage_dialog_error_message">문장 생성에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="regenerate">다시 생성</string>
</resources>