<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.addasset.AddAssetActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAsset"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/app_bar_add_asset"
        tools:background="@color/light_blue"
        tools:title="@string/title_asset_detail" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/asset_name" />

            <EditText
                android:id="@+id/editTextAssetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_rounded_corner_rectangle"
                android:hint="@string/asset_name_hint"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/buy_date" />

            <TextView
                android:id="@+id/textViewBuyDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_rounded_corner_rectangle"
                android:gravity="center_vertical"
                android:padding="8dp"
                app:drawableEndCompat="@drawable/ic_calendar"
                tools:text="@string/choose_date" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonAssetConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/blue"
        tools:text="@string/fix" />

</LinearLayout>